[gd_scene load_steps=5 format=3 uid="uid://dtfmj5o2ce2wn"]

[ext_resource type="Script" uid="uid://g8inkpb02qra" path="res://script/mine.gd" id="1_f077w"]
[ext_resource type="Texture2D" uid="uid://ihnhe57xh2kn" path="res://assets/mine.png" id="2_8cne4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o140u"]
radius = 150.333

[sub_resource type="CircleShape2D" id="CircleShape2D_vhitt"]
radius = 1940.1

[node name="Mine" type="Node2D"]
script = ExtResource("1_f077w")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_8cne4")

[node name="Area2D" type="Area2D" parent="Sprite2D" groups=["mine"]]
visible = false
scale = Vector2(1.47, 1.47)

[node name="explosionRadius" type="CollisionShape2D" parent="Sprite2D/Area2D"]
shape = SubResource("CircleShape2D_o140u")

[node name="attractionArea" type="Area2D" parent="Sprite2D" groups=["explosion"]]
visible = false

[node name="attractionRadius" type="CollisionShape2D" parent="Sprite2D/attractionArea"]
shape = SubResource("CircleShape2D_vhitt")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="despawTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="Sprite2D/attractionArea" to="." method="_on_area_2d_2_area_entered"]
[connection signal="area_exited" from="Sprite2D/attractionArea" to="." method="_on_attraction_area_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="despawTimer" to="." method="_on_despaw_timer_timeout"]
